tests/pp-fail/bad_if.fl
\if "a string should not go here..."
\endif
